Fix crash in Colorize Mask when painted with 0 opacity

Well, there is no reason to try to fill empty scribbles

BUG:369095
Fixes T3811