libs/image/lazybrush/kis_multiway_cut.cpp
@@ -91,11 +91,23 @@ void KisMultiwayCut::run()
 
     while (m_d->keyStrokes.size() > 1) {
         KeyStroke current = m_d->keyStrokes.takeFirst();
+
+        // if current scribble is empty, it just has no effect
+        if (current.dev->exactBounds().isEmpty()) continue;
+
         KisPainter gc(other);
 
         Q_FOREACH (const KeyStroke &s, m_d->keyStrokes) {
             const QRect rc = s.dev->extent() & m_d->boundingRect;
             gc.bitBlt(rc.topLeft(), s.dev, rc);
+        }
+
+        // if other is empty, it means that *all* other strokes are
+        // empty, so there is no reason to continue the process
+        if (other->exactBounds().isEmpty()) {
+            m_d->keyStrokes.clear();
+            m_d->keyStrokes << current;
+            break;
         }
 
         KisLazyFillTools::cutOneWay(current.color,
